--- a/content/resources/15-083jf09-th.md
+++ b/content/resources/15-083jf09-th.md
@@ -1,13 +1,15 @@
 ---
 content_type: resource
 description: New image Upload
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/828fc1fdfc8a0515ceb387402b16f080_15-083jf09-th.jpg
+file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/828fc1fdfc8a0515ceb387402b16f080_15-083jf09-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: An example of Lagrangean duality, discussed in Lecture 8. (Image by Prof.
     Bertsimas.)
   credit: ''
   image-alt: A figure illustrating Lagrangean duality.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 15-083jf09-th.jpg
 uid: 828fc1fd-fc8a-0515-ceb3-87402b16f080
