--- a/content/resources/mit15_083jf09_assn05.md
+++ b/content/resources/mit15_083jf09_assn05.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: 'This resource contains problem set 5. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/b2fb73ff6921c096cf4c5dfb5adf62a2_MIT15_083JF09_assn05.pdf
+file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/b2fb73ff6921c096cf4c5dfb5adf62a2_MIT15_083JF09_assn05.pdf
 file_type: application/pdf
+learning_resource_types:
+- Assignments
+ocw_type: OCWFile
+parent_title: Assignments
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_083JF09_assn05.pdf
 uid: b2fb73ff-6921-c096-cf4c-5dfb5adf62a2
