--- a/content/resources/mit15_083jf09_lec04.md
+++ b/content/resources/mit15_083jf09_lec04.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains information related to independence set systems
   and matroids, strength of valid inequalities and nonlinear formulations. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/d033bf65454b70e9f23abbac2109dd77_MIT15_083JF09_lec04.pdf
+file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/d033bf65454b70e9f23abbac2109dd77_MIT15_083JF09_lec04.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_083JF09_lec04.pdf
 uid: d033bf65-454b-70e9-f23a-bbac2109dd77
