--- a/content/resources/mit15_083jf09_lec06.md
+++ b/content/resources/mit15_083jf09_lec06.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: 'This resource contains information related to randomized rounding methods. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/5f5e9ce28082dce02c359a8b43a40b62_MIT15_083JF09_lec06.pdf
+file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/5f5e9ce28082dce02c359a8b43a40b62_MIT15_083JF09_lec06.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_083JF09_lec06.pdf
 uid: 5f5e9ce2-8082-dce0-2c35-9a8b43a40b62
