--- a/content/resources/mit15_083jf09_lec08.md
+++ b/content/resources/mit15_083jf09_lec08.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains information related to duality from lift and
   project and lagrangean duality. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/0036ce1440b69bb15bb6080528bae4e8_MIT15_083JF09_lec08.pdf
+file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/0036ce1440b69bb15bb6080528bae4e8_MIT15_083JF09_lec08.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_083JF09_lec08.pdf
 uid: 0036ce14-40b6-9bb1-5bb6-080528bae4e8
