--- a/content/resources/mit15_083jf09_lec16.md
+++ b/content/resources/mit15_083jf09_lec16.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains information related to a theorem by Edmonds and
   Giles and totally unimodular matrices. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/21984f599b1e793a2ce1bfec0fec6bfc_MIT15_083JF09_lec16.pdf
+file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/21984f599b1e793a2ce1bfec0fec6bfc_MIT15_083JF09_lec16.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_083JF09_lec16.pdf
 uid: 21984f59-9b1e-793a-2ce1-bfec0fec6bfc
