--- a/content/resources/mit15_083jf09_lec17.md
+++ b/content/resources/mit15_083jf09_lec17.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains information related to cutting plane methods
   I. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/8fbabfd4ab31165cfc55f2baf5fff043_MIT15_083JF09_lec17.pdf
+file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/8fbabfd4ab31165cfc55f2baf5fff043_MIT15_083JF09_lec17.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_083JF09_lec17.pdf
 uid: 8fbabfd4-ab31-165c-fc55-f2baf5fff043
