--- a/content/resources/mit15_083jf09_lec18.md
+++ b/content/resources/mit15_083jf09_lec18.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains information related to stable sets and perfect
   matchings. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/7ca02eab44c9ea0ac39f6ce4e7915cc6_MIT15_083JF09_lec18.pdf
+file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/7ca02eab44c9ea0ac39f6ce4e7915cc6_MIT15_083JF09_lec18.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_083JF09_lec18.pdf
 uid: 7ca02eab-44c9-ea0a-c39f-6ce4e7915cc6
