--- a/content/resources/mit15_083jf09_lec19.md
+++ b/content/resources/mit15_083jf09_lec19.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: 'This resource contains information related to enumerative methods. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/e689f785132f551e635169d6694fdc13_MIT15_083JF09_lec19.pdf
+file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/e689f785132f551e635169d6694fdc13_MIT15_083JF09_lec19.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_083JF09_lec19.pdf
 uid: e689f785-132f-551e-6351-69d6694fdc13
