--- a/content/resources/mit15_083jf09_lec21.md
+++ b/content/resources/mit15_083jf09_lec21.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains information related to approximation algorithms
   I. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/9fdd64b378a29b0a348d9bbe0d57576a_MIT15_083JF09_lec21.pdf
+file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/9fdd64b378a29b0a348d9bbe0d57576a_MIT15_083JF09_lec21.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_083JF09_lec21.pdf
 uid: 9fdd64b3-78a2-9b0a-348d-9bbe0d57576a
