--- a/content/resources/mit15_083jf09_lec22.md
+++ b/content/resources/mit15_083jf09_lec22.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: This resource contains information related to approximation algorithms
   II.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/6b105f245cf0048b2d943219006f0f72_MIT15_083JF09_lec22.pdf
+file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/6b105f245cf0048b2d943219006f0f72_MIT15_083JF09_lec22.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_083JF09_lec22.pdf
 uid: 6b105f24-5cf0-048b-2d94-3219006f0f72
