--- a/content/resources/mit15_083jf09_lec25.md
+++ b/content/resources/mit15_083jf09_lec25.md
@@ -2,8 +2,13 @@
 content_type: resource
 description: 'This resource contains information related to mixed-integer programming
   II. '
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/58c6a35e423cbdd6fabe053df20a97fc_MIT15_083JF09_lec25.pdf
+file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/58c6a35e423cbdd6fabe053df20a97fc_MIT15_083JF09_lec25.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_083JF09_lec25.pdf
 uid: 58c6a35e-423c-bdd6-fabe-053df20a97fc
