Sync all content

--- a/content/resources/mit15_083jf09_assn05.md
+++ b/content/resources/mit15_083jf09_assn05.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
+parent_uid: 036d2a3a-2279-3643-fd86-a541c71d8046
 resourcetype: Document
 title: MIT15_083JF09_assn05.pdf
 uid: b2fb73ff-6921-c096-cf4c-5dfb5adf62a2
