--- a/content/resources/mit15_083jf09_lec04.md
+++ b/content/resources/mit15_083jf09_lec04.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: fa219fa9-2e40-9fa7-2579-86db986b0dc9
 resourcetype: Document
 title: MIT15_083JF09_lec04.pdf
 uid: d033bf65-454b-70e9-f23a-bbac2109dd77
