--- a/content/resources/mit15_083jf09_lec10.md
+++ b/content/resources/mit15_083jf09_lec10.md
@@ -10,6 +10,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: fa219fa9-2e40-9fa7-2579-86db986b0dc9
 resourcetype: Document
 title: MIT15_083JF09_lec10.pdf
 uid: 60dd5289-6e18-3e2c-60bf-e40e076d83d3
