--- a/content/resources/mit15_083jf09_lec17.md
+++ b/content/resources/mit15_083jf09_lec17.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: fa219fa9-2e40-9fa7-2579-86db986b0dc9
 resourcetype: Document
 title: MIT15_083JF09_lec17.pdf
 uid: 8fbabfd4-ab31-165c-fc55-f2baf5fff043
