--- a/content/resources/mit15_083jf09_lec18.md
+++ b/content/resources/mit15_083jf09_lec18.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: fa219fa9-2e40-9fa7-2579-86db986b0dc9
 resourcetype: Document
 title: MIT15_083JF09_lec18.pdf
 uid: 7ca02eab-44c9-ea0a-c39f-6ce4e7915cc6
