--- a/content/resources/mit15_083jf09_lec19.md
+++ b/content/resources/mit15_083jf09_lec19.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: fa219fa9-2e40-9fa7-2579-86db986b0dc9
 resourcetype: Document
 title: MIT15_083JF09_lec19.pdf
 uid: e689f785-132f-551e-6351-69d6694fdc13
