--- a/content/resources/mit15_083jf09_lec20.md
+++ b/content/resources/mit15_083jf09_lec20.md
@@ -8,6 +8,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: fa219fa9-2e40-9fa7-2579-86db986b0dc9
 resourcetype: Document
 title: MIT15_083JF09_lec20.pdf
 uid: 0dd0734d-d1ce-7ff0-f807-fda502888fc3
