--- a/content/resources/mit15_083jf09_lec22.md
+++ b/content/resources/mit15_083jf09_lec22.md
@@ -9,6 +9,7 @@ learning_resource_types:
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
+parent_uid: fa219fa9-2e40-9fa7-2579-86db986b0dc9
 resourcetype: Document
 title: MIT15_083JF09_lec22.pdf
 uid: 6b105f24-5cf0-048b-2d94-3219006f0f72
