--- a/content/resources/mit15_083jf09_assn05.md
+++ b/content/resources/mit15_083jf09_assn05.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: 'This resource contains problem set 5. '
-file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/b2fb73ff6921c096cf4c5dfb5adf62a2_MIT15_083JF09_assn05.pdf
+file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/b2fb73ff6921c096cf4c5dfb5adf62a2_MIT15_083JF09_assn05.pdf
 file_type: application/pdf
 learning_resource_types:
 - Assignments
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_083JF09_assn05.pdf
 uid: b2fb73ff-6921-c096-cf4c-5dfb5adf62a2
 ---
+This resource contains problem set 5. 
+
