--- a/content/resources/mit15_083jf09_lec01.md
+++ b/content/resources/mit15_083jf09_lec01.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource contains information related to structure of class, integer
   optimization, modeling with binary variables and implications.
-file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/c09092933303a4c92797db2e8e4cc853_MIT15_083JF09_lec01.pdf
+file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/c09092933303a4c92797db2e8e4cc853_MIT15_083JF09_lec01.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_083JF09_lec01.pdf
 uid: c0909293-3303-a4c9-2797-db2e8e4cc853
 ---
+This resource contains information related to structure of class, integer optimization, modeling with binary variables and implications.
+
