--- a/content/resources/mit15_083jf09_lec05.md
+++ b/content/resources/mit15_083jf09_lec05.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to total unimodularity and
   dual methods. '
-file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/cb357e6aa99c2fe6f05aeab8dc02a996_MIT15_083JF09_lec05.pdf
+file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/cb357e6aa99c2fe6f05aeab8dc02a996_MIT15_083JF09_lec05.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_083JF09_lec05.pdf
 uid: cb357e6a-a99c-2fe6-f05a-eab8dc02a996
 ---
+This resource contains information related to total unimodularity and dual methods. 
+
