--- a/content/resources/mit15_083jf09_lec07.md
+++ b/content/resources/mit15_083jf09_lec07.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains reference material related to matching polyhedron
   and lift and project.  '
-file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/66ab4abef4546bd4b6fd6c3ef9440c45_MIT15_083JF09_lec07.pdf
+file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/66ab4abef4546bd4b6fd6c3ef9440c45_MIT15_083JF09_lec07.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_083JF09_lec07.pdf
 uid: 66ab4abe-f454-6bd4-b6fd-6c3ef9440c45
 ---
+This resource contains reference material related to matching polyhedron and lift and project.  
+
