--- a/content/resources/mit15_083jf09_lec08.md
+++ b/content/resources/mit15_083jf09_lec08.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to duality from lift and
   project and lagrangean duality. '
-file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/0036ce1440b69bb15bb6080528bae4e8_MIT15_083JF09_lec08.pdf
+file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/0036ce1440b69bb15bb6080528bae4e8_MIT15_083JF09_lec08.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_083JF09_lec08.pdf
 uid: 0036ce14-40b6-9bb1-5bb6-080528bae4e8
 ---
+This resource contains information related to duality from lift and project and lagrangean duality. 
+
