--- a/content/resources/mit15_083jf09_lec09.md
+++ b/content/resources/mit15_083jf09_lec09.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to solution of lagrangean
   dual and geometry and strength of the lagrangean dual. '
-file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/0f3bef63990e2ad5c559713b2dc7fa6e_MIT15_083JF09_lec09.pdf
+file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/0f3bef63990e2ad5c559713b2dc7fa6e_MIT15_083JF09_lec09.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_083JF09_lec09.pdf
 uid: 0f3bef63-990e-2ad5-c559-713b2dc7fa6e
 ---
+This resource contains information related to solution of lagrangean dual and geometry and strength of the lagrangean dual. 
+
