--- a/content/resources/mit15_083jf09_lec11.md
+++ b/content/resources/mit15_083jf09_lec11.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to data uncertainty and robust
   MIP. '
-file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/3a46409764f0b3d9cf35899b3e270f0f_MIT15_083JF09_lec11.pdf
+file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/3a46409764f0b3d9cf35899b3e270f0f_MIT15_083JF09_lec11.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_083JF09_lec11.pdf
 uid: 3a464097-64f0-b3d9-cf35-899b3e270f0f
 ---
+This resource contains information related to data uncertainty and robust MIP. 
+
