--- a/content/resources/mit15_083jf09_lec12.md
+++ b/content/resources/mit15_083jf09_lec12.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: This resource contains information related to integer points in lattices.
-file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/6a51a6894cf0af1dacddf7ca68276afa_MIT15_083JF09_lec12.pdf
+file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/6a51a6894cf0af1dacddf7ca68276afa_MIT15_083JF09_lec12.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_083JF09_lec12.pdf
 uid: 6a51a689-4cf0-af1d-acdd-f7ca68276afa
 ---
+This resource contains information related to integer points in lattices.
+
