--- a/content/resources/mit15_083jf09_lec13.md
+++ b/content/resources/mit15_083jf09_lec13.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: 'This resource contains information related to algebraic geometry I. '
-file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/e26d63706a57d243932d7ad13bbaceb3_MIT15_083JF09_lec13.pdf
+file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/e26d63706a57d243932d7ad13bbaceb3_MIT15_083JF09_lec13.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_083JF09_lec13.pdf
 uid: e26d6370-6a57-d243-932d-7ad13bbaceb3
 ---
+This resource contains information related to algebraic geometry I. 
+
