--- a/content/resources/mit15_083jf09_lec14.md
+++ b/content/resources/mit15_083jf09_lec14.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to reduced bases for lattices
   and simultaneous diophantine approximation.  '
-file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/d792e60582882807d4b80057bcc61697_MIT15_083JF09_lec14.pdf
+file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/d792e60582882807d4b80057bcc61697_MIT15_083JF09_lec14.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_083JF09_lec14.pdf
 uid: d792e605-8288-2807-d4b8-0057bcc61697
 ---
+This resource contains information related to reduced bases for lattices and simultaneous diophantine approximation.  
+
