--- a/content/resources/mit15_083jf09_lec15.md
+++ b/content/resources/mit15_083jf09_lec15.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: 'This resource contains information related to algebraic geometry II. '
-file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/bf3675b42518d8ac44867a40d55576fb_MIT15_083JF09_lec15.pdf
+file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/bf3675b42518d8ac44867a40d55576fb_MIT15_083JF09_lec15.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_083JF09_lec15.pdf
 uid: bf3675b4-2518-d8ac-4486-7a40d55576fb
 ---
+This resource contains information related to algebraic geometry II. 
+
