--- a/content/resources/mit15_083jf09_lec19.md
+++ b/content/resources/mit15_083jf09_lec19.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: 'This resource contains information related to enumerative methods. '
-file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/e689f785132f551e635169d6694fdc13_MIT15_083JF09_lec19.pdf
+file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/e689f785132f551e635169d6694fdc13_MIT15_083JF09_lec19.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_083JF09_lec19.pdf
 uid: e689f785-132f-551e-6351-69d6694fdc13
 ---
+This resource contains information related to enumerative methods. 
+
