--- a/content/resources/mit15_083jf09_lec20.md
+++ b/content/resources/mit15_083jf09_lec20.md
@@ -1,7 +1,7 @@
 ---
 content_type: resource
 description: 'This resource contains information related to enumeration and heuristics. '
-file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/0dd0734dd1ce7ff0f807fda502888fc3_MIT15_083JF09_lec20.pdf
+file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/0dd0734dd1ce7ff0f807fda502888fc3_MIT15_083JF09_lec20.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -13,3 +13,5 @@ resourcetype: Document
 title: MIT15_083JF09_lec20.pdf
 uid: 0dd0734d-d1ce-7ff0-f807-fda502888fc3
 ---
+This resource contains information related to enumeration and heuristics. 
+
