--- a/content/resources/mit15_083jf09_lec21.md
+++ b/content/resources/mit15_083jf09_lec21.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to approximation algorithms
   I. '
-file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/9fdd64b378a29b0a348d9bbe0d57576a_MIT15_083JF09_lec21.pdf
+file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/9fdd64b378a29b0a348d9bbe0d57576a_MIT15_083JF09_lec21.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_083JF09_lec21.pdf
 uid: 9fdd64b3-78a2-9b0a-348d-9bbe0d57576a
 ---
+This resource contains information related to approximation algorithms I. 
+
