--- a/content/resources/mit15_083jf09_lec22.md
+++ b/content/resources/mit15_083jf09_lec22.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: This resource contains information related to approximation algorithms
   II.
-file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/6b105f245cf0048b2d943219006f0f72_MIT15_083JF09_lec22.pdf
+file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/6b105f245cf0048b2d943219006f0f72_MIT15_083JF09_lec22.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_083JF09_lec22.pdf
 uid: 6b105f24-5cf0-048b-2d94-3219006f0f72
 ---
+This resource contains information related to approximation algorithms II.
+
