--- a/content/resources/mit15_083jf09_lec24.md
+++ b/content/resources/mit15_083jf09_lec24.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to mixed-integer programming
   I. '
-file: /media/courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/552cf3fb728ae32b7afc08851f377497_MIT15_083JF09_lec24.pdf
+file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/552cf3fb728ae32b7afc08851f377497_MIT15_083JF09_lec24.pdf
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
@@ -14,3 +14,5 @@ resourcetype: Document
 title: MIT15_083JF09_lec24.pdf
 uid: 552cf3fb-728a-e32b-7afc-08851f377497
 ---
+This resource contains information related to mixed-integer programming I. 
+
