Sync all content

--- a/content/resources/15-083jf09.md
+++ b/content/resources/15-083jf09.md
@@ -9,6 +9,7 @@ image_metadata:
   credit: ''
   image-alt: A figure illustrating Lagrangean duality.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 15-083jf09.jpg
