--- a/content/resources/mit15_083jf09_lec01.md
+++ b/content/resources/mit15_083jf09_lec01.md
@@ -6,6 +6,7 @@ file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_083JF09_lec01.pdf
 uid: c0909293-3303-a4c9-2797-db2e8e4cc853
 ---
 This resource contains information related to structure of class, integer optimization, modeling with binary variables and implications.
-
