--- a/content/resources/mit15_083jf09_lec10.md
+++ b/content/resources/mit15_083jf09_lec10.md
@@ -7,6 +7,7 @@ file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -16,4 +17,3 @@ title: MIT15_083JF09_lec10.pdf
 uid: 60dd5289-6e18-3e2c-60bf-e40e076d83d3
 ---
 This resource contains information related to ellipsoid method for optimization, ellipsoid method for the feasibility problem and problems with exponentially many constraints. 
-
