--- a/content/resources/mit15_083jf09_lec11.md
+++ b/content/resources/mit15_083jf09_lec11.md
@@ -6,6 +6,7 @@ file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_083JF09_lec11.pdf
 uid: 3a464097-64f0-b3d9-cf35-899b3e270f0f
 ---
 This resource contains information related to data uncertainty and robust MIP. 
-
