--- a/content/resources/mit15_083jf09_lec14.md
+++ b/content/resources/mit15_083jf09_lec14.md
@@ -6,6 +6,7 @@ file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_083JF09_lec14.pdf
 uid: d792e605-8288-2807-d4b8-0057bcc61697
 ---
 This resource contains information related to reduced bases for lattices and simultaneous diophantine approximation.  
-
