--- a/content/resources/mit15_083jf09_lec22.md
+++ b/content/resources/mit15_083jf09_lec22.md
@@ -6,6 +6,7 @@ file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_083JF09_lec22.pdf
 uid: 6b105f24-5cf0-048b-2d94-3219006f0f72
 ---
 This resource contains information related to approximation algorithms II.
-
