--- a/content/resources/15-083jf09-th.md
+++ b/content/resources/15-083jf09-th.md
@@ -9,10 +9,10 @@ image_metadata:
   credit: ''
   image-alt: A figure illustrating Lagrangean duality.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 15-083jf09-th.jpg
 uid: 828fc1fd-fc8a-0515-ceb3-87402b16f080
 ---
 New image Upload
-
