--- a/content/resources/mit15_083jf09_assn05.md
+++ b/content/resources/mit15_083jf09_assn05.md
@@ -5,6 +5,7 @@ file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2
 file_type: application/pdf
 learning_resource_types:
 - Assignments
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Assignments
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_083JF09_assn05.pdf
 uid: b2fb73ff-6921-c096-cf4c-5dfb5adf62a2
 ---
 This resource contains problem set 5. 
-
