--- a/content/resources/mit15_083jf09_lec03.md
+++ b/content/resources/mit15_083jf09_lec03.md
@@ -6,6 +6,7 @@ file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_083JF09_lec03.pdf
 uid: 5be17dfa-9a15-0e8d-b5b9-fb76905d2408
 ---
 This resource contains information related to polyhedral review, methods to generate valid inequalities and methods to generate facet defining inequalities. 
-
