--- a/content/resources/mit15_083jf09_lec07.md
+++ b/content/resources/mit15_083jf09_lec07.md
@@ -6,6 +6,7 @@ file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_083JF09_lec07.pdf
 uid: 66ab4abe-f454-6bd4-b6fd-6c3ef9440c45
 ---
 This resource contains reference material related to matching polyhedron and lift and project.  
-
