--- a/content/resources/mit15_083jf09_lec09.md
+++ b/content/resources/mit15_083jf09_lec09.md
@@ -6,6 +6,7 @@ file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_083JF09_lec09.pdf
 uid: 0f3bef63-990e-2ad5-c559-713b2dc7fa6e
 ---
 This resource contains information related to solution of lagrangean dual and geometry and strength of the lagrangean dual. 
-
