--- a/content/resources/mit15_083jf09_lec15.md
+++ b/content/resources/mit15_083jf09_lec15.md
@@ -5,6 +5,7 @@ file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_083JF09_lec15.pdf
 uid: bf3675b4-2518-d8ac-4486-7a40d55576fb
 ---
 This resource contains information related to algebraic geometry II. 
-
