--- a/content/resources/mit15_083jf09_lec16.md
+++ b/content/resources/mit15_083jf09_lec16.md
@@ -6,6 +6,7 @@ file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_083JF09_lec16.pdf
 uid: 21984f59-9b1e-793a-2ce1-bfec0fec6bfc
 ---
 This resource contains information related to a theorem by Edmonds and Giles and totally unimodular matrices. 
-
