--- a/content/resources/mit15_083jf09_lec18.md
+++ b/content/resources/mit15_083jf09_lec18.md
@@ -6,6 +6,7 @@ file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -15,4 +16,3 @@ title: MIT15_083JF09_lec18.pdf
 uid: 7ca02eab-44c9-ea0a-c39f-6ce4e7915cc6
 ---
 This resource contains information related to stable sets and perfect matchings. 
-
