--- a/content/resources/mit15_083jf09_lec20.md
+++ b/content/resources/mit15_083jf09_lec20.md
@@ -5,6 +5,7 @@ file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_083JF09_lec20.pdf
 uid: 0dd0734d-d1ce-7ff0-f807-fda502888fc3
 ---
 This resource contains information related to enumeration and heuristics. 
-
