Sync all content

--- a/content/resources/15-083jf09-th.md
+++ b/content/resources/15-083jf09-th.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: New image Upload
 file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/828fc1fdfc8a0515ceb387402b16f080_15-083jf09-th.jpg
+file_size: 11150
 file_type: image/jpeg
 image_metadata:
   caption: An example of Lagrangean duality, discussed in Lecture 8. (Image by Prof.
