--- a/content/resources/15-083jf09.md
+++ b/content/resources/15-083jf09.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: ''
 file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/7e9b1cf3cf6ee9e6dbf50f48bb1a45c1_15-083jf09.jpg
+file_size: 72334
 file_type: image/jpeg
 image_metadata:
   caption: An example of Lagrangean duality, discussed in Lecture 8. (Image by Prof.
