--- a/content/resources/mit15_083jf09_lec04.md
+++ b/content/resources/mit15_083jf09_lec04.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains information related to independence set systems
   and matroids, strength of valid inequalities and nonlinear formulations. '
 file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/d033bf65454b70e9f23abbac2109dd77_MIT15_083JF09_lec04.pdf
+file_size: 151663
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
