--- a/content/resources/mit15_083jf09_lec09.md
+++ b/content/resources/mit15_083jf09_lec09.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains information related to solution of lagrangean
   dual and geometry and strength of the lagrangean dual. '
 file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/0f3bef63990e2ad5c559713b2dc7fa6e_MIT15_083JF09_lec09.pdf
+file_size: 139518
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
