--- a/content/resources/mit15_083jf09_lec10.md
+++ b/content/resources/mit15_083jf09_lec10.md
@@ -4,6 +4,7 @@ description: 'This resource contains information related to ellipsoid method for
   ellipsoid method for the feasibility problem and problems with exponentially many
   constraints. '
 file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/60dd52896e183e2c60bfe40e076d83d3_MIT15_083JF09_lec10.pdf
+file_size: 239391
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
