--- a/content/resources/mit15_083jf09_lec13.md
+++ b/content/resources/mit15_083jf09_lec13.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to algebraic geometry I. '
 file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/e26d63706a57d243932d7ad13bbaceb3_MIT15_083JF09_lec13.pdf
+file_size: 188068
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
