--- a/content/resources/mit15_083jf09_lec18.md
+++ b/content/resources/mit15_083jf09_lec18.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains information related to stable sets and perfect
   matchings. '
 file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/7ca02eab44c9ea0ac39f6ce4e7915cc6_MIT15_083JF09_lec18.pdf
+file_size: 202968
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
