--- a/content/resources/mit15_083jf09_lec19.md
+++ b/content/resources/mit15_083jf09_lec19.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to enumerative methods. '
 file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/e689f785132f551e635169d6694fdc13_MIT15_083JF09_lec19.pdf
+file_size: 311357
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
