--- a/content/resources/mit15_083jf09_lec20.md
+++ b/content/resources/mit15_083jf09_lec20.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: 'This resource contains information related to enumeration and heuristics. '
 file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/0dd0734dd1ce7ff0f807fda502888fc3_MIT15_083JF09_lec20.pdf
+file_size: 139292
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
