--- a/content/resources/mit15_083jf09_lec21.md
+++ b/content/resources/mit15_083jf09_lec21.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains information related to approximation algorithms
   I. '
 file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/9fdd64b378a29b0a348d9bbe0d57576a_MIT15_083JF09_lec21.pdf
+file_size: 154677
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
