--- a/content/resources/mit15_083jf09_lec23.md
+++ b/content/resources/mit15_083jf09_lec23.md
@@ -3,6 +3,7 @@ content_type: resource
 description: 'This resource contains information related to approximation algorithms
   III. '
 file: /courses/15-083j-integer-programming-and-combinatorial-optimization-fall-2009/0f635e5f7d8dd45e87af2bd2a08e53a1_MIT15_083JF09_lec23.pdf
+file_size: 190838
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
